--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ endmacro()
 add_library(cacti STATIC cacti.c actor_system.c actor.c  queue.c threadpool.c err.c)
 add_executable(macierz macierz.c)
 add_executable(silnia silnia.c)
-#add_executable(test_queue test_queue.c) # todo usunac
+add_executable(test_queue test_queue.c) # todo usunac
 add_subdirectory(test)
 
 install(TARGETS cacti DESTINATION .)
